--- a/css/home.css
+++ b/css/home.css
@@ -159,7 +159,7 @@
 /*========brand-section==========*/
 .brand-section{ 
     width: 100%;
-    background-image: url(../Image/Jpg/bg-home-1.jpg);
+    background-image: url(../image/Jpg/bg-home-1.jpg);
     height: 850px;
      background-attachment: fixed;
     position: relative;
