--- a/css/about.css
+++ b/css/about.css
@@ -2,7 +2,7 @@
     height: 100vh;    
     min-height: 650px;
     width: 100%;
-    background-image: url(../Image/Jpg/bg-title-1.jpg);
+    background-image: url(../image/Jpg/bg-title-1.jpg);
 } 
 .hero-header{
     width: 100%;
