--- a/css/header.css
+++ b/css/header.css
@@ -1,5 +1,5 @@
 .hero-section{
-/*    background-image: url(../Image/Jpg/slider1.jpg);*/
+/*    background-image: url(../image/Jpg/slider1.jpg);*/
     height: 100vh;
     width: 100%;
     min-height: 850px;
