--- a/css/pages.css
+++ b/css/pages.css
@@ -1,5 +1,5 @@
 .page-hero-section{
-    background-image: url(../Image/Jpg/bg-home-1.jpg);
+    background-image: url(../image/Jpg/bg-home-1.jpg);
     min-height: 650px;
     height: 100vh;
 }
