--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -2,7 +2,7 @@
     width: 100%;
     height: 100vh;
     min-height: 650px;
-    background-image: url(../Image/Jpg/bg-home-2.jpg);
+    background-image: url(../image/Jpg/bg-home-2.jpg);
 
 }
 .port-gallery .port-nav{
