--- a/css/style.css
+++ b/css/style.css
@@ -172,5 +172,712 @@ span.num{
   color: #ebb204;
 }
 .stand-title{
-    color: #606060;
+  color: #606060;
 }
+
+/*============|Start-Header-Pages|=============*/
+
+
+.hero-section{
+/*    background-image: url(../image/Jpg/slider1.jpg);*/
+    height: 100vh;
+    width: 100%;
+    min-height: 850px;
+}
+.navigation{
+    padding: 0;
+    width: 100%;
+}
+.bg-panel{
+    z-index: 99;
+    position: fixed;
+    height: 120px;
+    width: 100%;
+    transition: all 0.4s linear;
+
+}
+.bg-color{
+    background: #ebb204;
+}
+.bg-panel a{
+    color: #101010;
+
+}
+.nav-scroll{
+    background-color: #fff;
+    transition: all 0.4s linear;
+}
+.navigation a .fill{
+    fill: #101010;
+}
+
+/*==========nav-btn==========*/
+.navigation .logo{
+    width: 250px;
+    height: auto;
+    object-fit: contain;
+    object-position: center;
+    vertical-align: 0;
+    fill: #fff;
+}
+.nav-menu ul li a{
+    color: #fff;
+    font-size: 0.8rem;
+    text-transform: uppercase;
+    font-weight: 500;
+    
+}
+.nav-menu ul li .black{
+    color: #101010;
+}
+ul li a span{
+    padding-right: 3px;
+}
+.dropdown-toggle::after{
+    display: none;
+}
+.drop-menu{
+    background-color: #ebb204;
+    border-radius: 0;
+
+}
+.nav-menu .drop-menu a{
+    color: #101010;
+}
+/*===========*slides-hero===========*/
+.hero-section .hero-slide{
+    position: relative;
+}
+.hero-section .slide{
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
+    height: 100vh;
+    min-height: 850px;
+}
+.hero-section .slide-1{
+    background-image: url(../image/Jpg/slider1.jpg);
+}
+.hero-section .slide-2{
+    background-image: url(../image/Jpg/slider2.jpg);
+}
+.hero-slide .hero-center-1{
+    height: 100%;
+    justify-content: center;
+    text-align: center;
+
+
+}
+.hero-slide .hero-center-2{
+    justify-content: flex-start;
+    height: 100%;
+}
+.hero-slide .hero-content{
+    padding: 10px;
+    color: #fff;
+    width: 50%;
+}
+.hero-section .slide-left, .slide-right{
+    position: absolute;
+    top: 50%;
+    z-index: 10;
+    width: 65px;
+    height: 65px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 1rem;
+    color: #fff;
+    background-color: #1010109f;
+    border: none;
+    outline: none;
+    border-radius: 50%;
+}
+.hero-section .slide-left{
+    right: 20px;
+}
+.hero-section .slide-right{
+    left: 20px;
+}
+
+/*============|End-Header-Pages|=============*/
+
+
+
+/*============|Start-Home-Pages|=============*/
+
+/*========service-section==========*/
+.service-section .image{
+    overflow: hidden;
+    position: relative;
+    z-index: 1;
+    transition: all 0.4s linear;
+}
+.service-section .image img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: top;
+    transform: scale(1);
+    transition: all 0.4s linear;
+}
+.service-section .image:hover img{
+    transform: scale(1.2);
+
+
+}
+.service-section .image::before{
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;    
+    height: 100%;
+    background-color: #101010;
+    opacity: 0.5;
+    z-index: 1;
+    transition: all 0.4s linear;
+    cursor: pointer;
+
+}
+.service-section .image:hover::before{
+    opacity: 0;
+}
+
+/*========project-section==========*/
+.service-type-section .content p{
+    padding-top: 40px;
+}
+.service-type-section .benefits{
+    padding-top: 30px;
+}
+.service-type-section .benefits h3{
+    border-bottom: 1px solid #101010;   
+    padding-bottom: 15px;
+    margin-bottom: 30px;
+}
+.service-type-section .benefits svg{
+    fill: #ebb204;
+    width: 70px;
+    height: 70px;
+}
+/*========Project-section==========*/
+.project-section .content{
+    color: #fff;
+    text-align: center;
+
+}
+.project-section .content h3{
+    margin: 0;
+    margin-top: 15px;
+}
+.project-section .project-group{
+    transition: all 0.4s linear;
+}
+.project-section .image{
+    overflow: hidden;
+    transition: all 0.4s linear;
+    position: relative;
+    z-index: 1;
+    cursor: pointer;
+}
+.project-section .image img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transform: scale(1);
+    transition: all 0.4s linear;
+
+}
+.project-section .image:hover img{
+    transform: scale(1.2);
+}
+.project-section .content-panel{
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    top: 0;
+    visibility: hidden;
+    z-index: 1;
+    transition: all 0.4s linear 0.4s;
+    cursor: pointer;
+
+}
+.project-section .project-group:hover .content-panel{
+    visibility: visible;
+    background-color: #10101082;
+
+
+}
+.perform{
+    color: #101010; 
+    padding-top: 20px;
+    text-align: center;
+}
+
+/*========team-section==========*/
+.team-section .content {
+    text-align: center; 
+    width: 75%;
+    margin: 0 auto;
+    padding-bottom: 30px;
+
+}
+.team-section .whole-image{
+    position: relative;
+}
+.team-section .image img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.team-section .desi{
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: #10101047;
+    color: #fff;
+    width: 100%;
+    height: 100%;
+
+}
+.team-section .desi-title{
+    width: 100%;
+    position: absolute;
+    text-align: center;
+    bottom: 30px;
+    color: #fff;
+}
+/*========testiminial-section==========*/
+.testimonial-section .profile{
+    justify-content: flex-start;
+}
+.testimonial-section .profile img{
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin-right: 15px;
+
+}
+
+/*========brand-section==========*/
+.brand-section{ 
+    width: 100%;
+    background-image: url(../image/Jpg/bg-home-2.jpg); 
+    height: 850px;
+     background-attachment: fixed;
+    position: relative;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+.brand-section .partner img{
+    height: 50px;
+    width: auto;
+    cursor: pointer; 
+    margin: 0 auto;
+}
+.brand-section .partner .dark-logo{
+    height: 100px;
+}
+.brand-section .content{
+    text-align: center;
+    margin: 0 auto;
+    width: 75%;
+    padding-top: 50px;
+    color: #fff;
+
+}
+/*========blog-section==========*/
+
+
+/*========service-section==========*/
+
+/*============|End-Home-Pages|=============*/
+
+
+/*============|Start-About-Pages|=============*/
+.about-hero-section{
+    height: 100vh;    
+    min-height: 650px;
+    width: 100%;
+    background-image: url(../image/Jpg/bg-title-1.jpg);
+} 
+.hero-header{
+    width: 100%;
+    min-height: 650px;
+    height: 100vh;
+    align-items: flex-end;
+    padding-bottom: 100px;
+}
+.head-content{
+    width: 50%;
+    color: #fff;
+}
+.company-words .image img{
+    width: 100%;
+    height: 550px;
+    object-fit: contain;
+}
+.company-words .content{
+    padding-top: 80px;
+}
+.overview img{
+    height: 750px;
+    width: 100%;
+    object-fit: cover; 
+    object-position: top;
+
+}
+.overview .perform{
+    padding-bottom: 20px;
+}
+.overview .play-about{
+    position: relative;
+}
+.overview .play-btn{
+    position: absolute;
+    left: -50px;
+    top: 25%;
+    justify-content: center;
+    background-image: linear-gradient(45deg, #ebb204 0%, #c89805 100%);
+    padding: 70px 50px;
+    width: 450px;
+}
+
+.play-btn .play-box i{
+    font-size: 3.5rem;
+    color: #fff;
+    padding-bottom: 30px;
+}
+.overview .play-box h3{
+    color: #fff;
+}
+
+.bg-testi{
+    width: 100%;
+    height: 850px;
+    background-image: url(../Image/Jpg/bg-home-1.jpg);
+    display: flex;
+    align-items: center;
+}
+
+.person-intro{
+    text-align: center;
+    color: #101010;
+    padding-top: 15px;
+}
+/**/
+.query-section{
+    background-image: url(../Image/Jpg/bg-home-2.jpg);
+    height: 850px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+.query-section input, textarea{
+    font-size: 16px;
+    margin-bottom: 20px;
+    border-radius: 0;
+    padding: 15px 10px;
+}
+.query-section textarea{
+    border-radius: 0;
+    height: 180px;
+}
+.contact-query form{
+    margin-top: 40px;
+}
+.contact-query button{
+    border: none;   
+    outline: none;
+
+}
+/*============|End-About-Pages|=============*/
+
+/*============|Start-Pages-Pages|=============*/
+.page-hero-section{
+    background-image: url(../image/Jpg/bg-home-1.jpg);
+    min-height: 650px;
+    height: 100vh;
+}
+.article-section article{
+    margin-bottom: 35px;
+}
+.article-section article .image{
+    width: 100%;
+    height: 600px;
+    margin-bottom: 25px;
+}
+.article-section article img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+.article-section .small-image img{
+    width: 100%;
+    height: 90px;
+    object-fit: cover;
+
+}
+/*============|End-Pages-Pages|=============*/
+
+/*============|Start-Portfolio-Pages|=============*/
+.port-hero-section{
+    width: 100%;
+    height: 100vh;
+    min-height: 650px;
+    background-image: url(../image/Jpg/bg-home-2.jpg);
+
+}
+.port-gallery .port-nav{
+    justify-content: center; 
+    padding: 100px 0;
+
+}
+.port-nav ul{
+    border: none;
+}
+.port-nav li a{
+    color: #101010;
+    text-transform: uppercase;
+    font-size: 0.85rem;
+
+}
+
+.gallery-grid{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(8, 100px);
+    grid-gap: 15px;
+}
+.gallery-grid  .image{
+    width: 100%;
+    overflow: hidden;
+    height: 100%;
+    position: relative;
+}
+.gallery-grid .image img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;   
+    transition: all 0.4s linear;
+    
+}
+.gallery-grid .image:hover img{
+    transform: scale(1.2);
+}
+.gallery-grid .image1{
+    grid-area: 1/1/4/2;
+
+}
+.grid-content{
+    position: absolute;
+    width: 100%;
+    height: 100px;
+    bottom: 0;
+    background-color: #Fff;
+}
+.gallery-grid .image2{
+    grid-area: 1/2/6/3;
+
+}
+.gallery-grid .image3{
+    grid-area: 1/3/5/4;
+
+
+}
+.gallery-grid .image4{
+    grid-area: 4/1/9/2;
+
+}
+.gallery-grid .image5{
+    grid-area: 6/2/10/3;
+
+
+}
+.gallery-grid .image6{
+    grid-area: 5/3/8/4;
+
+}
+/*
+.gallery-grid .project1 img{
+    height: 250px;
+}
+.gallery-grid .project2 img{
+    height: 450px;
+}
+.gallery-grid .project3 img{
+    height: 350px;
+}
+.gallery-grid .project4 img{
+    height: 350px;
+}
+.gallery-grid .project5 img{
+    height: 450px;
+}
+.gallery-grid .project6 img{
+    height: 250px;
+}
+*/
+
+.port-gallery .port-nav li a.active{
+    border: 0;
+    background: none;
+    color: #ebb204;
+}
+/*============|End-Portfolio-Pages|=============*/
+
+/*============|Start-Service-Pages|=============*/
+
+/*============|End-Service-Pages|=============*/
+
+/*============|Start-about-Pages|=============*/
+.about-hero-section{
+    height: 100vh;    
+    min-height: 650px;
+    width: 100%;
+    background-image: url(../image/Jpg/bg-title-1.jpg);
+} 
+.hero-header{
+    width: 100%;
+    min-height: 650px;
+    height: 100vh;
+    align-items: flex-end;
+    padding-bottom: 100px;
+}
+.head-content{
+    width: 50%;
+    color: #fff;
+}
+.company-words .image img{
+    width: 100%;
+    height: 550px;
+    object-fit: contain;
+}
+.company-words .content{
+    padding-top: 80px;
+}
+.overview img{
+    height: 750px;
+    width: 100%;
+    object-fit: cover; 
+    object-position: top;
+
+}
+.overview .perform{
+    padding-bottom: 20px;
+}
+.overview .play-about{
+    position: relative;
+}
+.overview .play-btn{
+    position: absolute;
+    left: -50px;
+    top: 25%;
+    justify-content: center;
+    background-image: linear-gradient(45deg, #ebb204 0%, #c89805 100%);
+    padding: 70px 50px;
+    width: 450px;
+}
+
+.play-btn .play-box i{
+    font-size: 3.5rem;
+    color: #fff;
+    padding-bottom: 30px;
+}
+.overview .play-box h3{
+    color: #fff;
+}
+
+.bg-testi{
+    width: 100%;
+    height: 850px;
+    background-image: url(../Image/Jpg/bg-home-1.jpg);
+    display: flex;
+    align-items: center;
+}
+
+.person-intro{
+    text-align: center;
+    color: #101010;
+    padding-top: 15px;
+}
+/**/
+.query-section{
+    background-image: url(../Image/Jpg/bg-home-2.jpg);
+    height: 850px;
+    width: 100%;
+    display: flex;
+    align-items: center;
+}
+.query-section input, textarea{
+    font-size: 16px;
+    margin-bottom: 20px;
+    border-radius: 0;
+    padding: 15px 10px;
+}
+.query-section textarea{
+    border-radius: 0;
+    height: 180px;
+}
+.contact-query form{
+    margin-top: 40px;
+}
+.contact-query button{
+    border: none;   
+    outline: none;
+
+}
+
+
+/*============|End-about-Pages|=============*/
+
+
+
+/*============|Start-Footer-Pages|=============*/
+
+
+.footer-section{
+    padding: 50px 0  0 0;
+    background-color: #101010;
+    margin-top: 100px;
+    position: relative;
+}
+.footer-section .contact-num a{
+    color: #fff;
+}
+.social-icon ul{
+    justify-content: center;
+}
+.social-icon ul li{
+    margin: 0 10px;
+}
+.footer-section a{
+    color: #fff;
+}
+.footer-section .footer-content{
+    padding-top: 30px;
+}
+.footer-section li{
+    padding: 5px 0;
+    color: #fff;
+}
+.footer-image img{
+    width: 100%;
+    object-fit: contain;
+    position: absolute;
+    bottom: 0;
+
+}
+.yellow{
+    width: 100%;    
+    height: 150px;
+    background: #ebb204;
+
+}
+
+/*============|End-Footer-Pages|=============*/
