--- a/css/style.css
+++ b/css/style.css
@@ -310,12 +310,13 @@ ul li a span{
 .service-section .image{
     overflow: hidden;
     position: relative;
+    margin: 0  10px;
     z-index: 1;
     transition: all 0.4s linear;
 }
 .service-section .image img{
     width: 100%;
-    height: 100%;
+    height: 600px;
     object-fit: cover;
     object-position: top;
     transform: scale(1);
@@ -868,6 +869,7 @@ ul li a span{
 }
 .footer-image img{
     width: 100%;
+    height: 600px;
     object-fit: contain;
     position: absolute;
     bottom: 0;
