--- a/css/style.css
+++ b/css/style.css
@@ -35,8 +35,8 @@ a:hover{
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    height: 100vh;
-    min-height: 650px;
+    height: 100%;
+    
 }
 .section{
   padding: 50px 0;
@@ -194,6 +194,7 @@ span.num{
     color: #101010;
     font-size: 18px;
     text-transform: uppercase;
+    padding: 0;
 }
 
 
@@ -203,8 +204,6 @@ span.num{
 .hero-section{
 /*    background-image: url(../image/Jpg/slider1.jpg);*/
     width: 100%;
-    height: 100vh;
-    min-height: 850px;
 }
 .navigation{
     padding: 0;
@@ -213,7 +212,7 @@ span.num{
 .bg-panel{
     z-index: 99;
     position: fixed;
-    height: 100px;
+    height: 120px;
     width: 100%;
     transition: all 0.4s linear;
 
@@ -643,7 +642,7 @@ ul li a span{
 }
 .article-section article img{
     width: 100%;
-    height: 100%;
+    height: 600px;
     object-fit: cover;
 }
 .article-section .small-image img{
