--- a/css/style.css
+++ b/css/style.css
@@ -124,7 +124,7 @@ a:hover{
     margin-bottom: 0;
 }
 .small-head{
-  font-size: 16px;
+  font-size: 24px;
   font-weight: 500;
   -webkit-line-clamp: 2;
   display: -webkit-box;
@@ -204,7 +204,12 @@ span.num{
     text-transform: uppercase;
     padding: 0;
 }
-
+.blog-heading{
+  font-size: 32px;
+  font-weight: 600;
+  line-height: 32px;  
+  margin-bottom: 0;
+}
 
 /*============|Start-Header-Pages|=============*/
 
@@ -576,7 +581,7 @@ ul li a span{
     left: -50px;
     top: 25%;
     justify-content: center;
-    background-image: linear-gradient(45deg, #ebb204 0%, #c89805 100%);
+    background: linear-gradient(45deg, #ebb204 0%, #c89805 100%);
     padding: 70px 50px;
     width: 450px;
 }
@@ -618,6 +623,7 @@ ul li a span{
 .query-section textarea{
     border-radius: 0;
     height: 180px;
+    margin-bottom: 25px;
 }
 .contact-query form{
     margin-top: 40px;
@@ -640,19 +646,25 @@ ul li a span{
 }
 .article-section article .image{
     width: 100%;
-    height: 600px;
+    height: 550px;
     margin-bottom: 25px;
 }
 .article-section article img{
     width: 100%;
-    height: 600px;
+    max-width: 100%;
+    height: 100%;
+    display: block;
     object-fit: cover;
+    border: 3px;
 }
 .article-section .small-image img{
     width: 100%;
-    height: 90px;
+    height: 100px;
     object-fit: cover;
 
+} 
+.article-section h3{
+  color: #ebb204;
 }
 /*============|End-Pages-Pages|=============*/
 
@@ -785,8 +797,14 @@ ul li a span{
     color: #ebb204;
 }
 /*============|End-Portfolio-Pages|=============*/
-
+  .service-hero-section{
+    background-image: url(../image/Jpg/bg-home-2.jpg);
+    height: 100vh;
+    min-height: 650px;
+  }
 /*============|Start-Service-Pages|=============*/
+
+
 
 /*============|End-Service-Pages|=============*/
 
@@ -827,10 +845,15 @@ ul li a span{
   border: #e0e0e0;
   background-color: #fff;
   padding: 10px;
-  height: 80px;
+  height: 60px;
 }
 .contact-form textarea{
   margin-bottom: 30px;
+}
+.location .map-locate{
+  width: 100%;
+  height: 500px;
+
 }
 
 /*============|End-Contact-Pages|=============*/
@@ -990,7 +1013,9 @@ html,body{
   /*===============About===============*/
   
   /*===============Pages===============*/
-
+  .article-section article .image{
+    height: 450px;
+  }
   /*===============Portfolio===========*/
 
   /*===============service=============*/
@@ -1223,7 +1248,12 @@ html,body{
   /*===============service=============*/
 
   /*===============Contact=============*/
-
+  .article-section .small-image img{
+    height: 80px;
+  }
+  .article-section article .image{
+    height: 350px;
+  }
   /*===============Footer-section======*/
 
   /*===============media-query======*/
@@ -1270,7 +1300,7 @@ html,body{
     line-height: 28px;
 }
 .small-head{
-  font-size: 14px;
+  font-size: 20px;
 }
 .small-title{
   font-size: 14px;
@@ -1291,7 +1321,9 @@ span.num{
 .section-header-lg{
   width: 75%;
 }
-
+.blog-heading{
+  font-size: 28px;
+}
 .btn-black{
     color: #101010;
     font-size: 14px;
@@ -1320,13 +1352,21 @@ span.num{
     width: 75%;
   }
   /*===============Pages===============*/
-
+  .article-section .small-image img{
+    height: 100px;
+  }
   /*===============Portfolio===========*/
 
   /*===============service=============*/
 
   /*===============Contact=============*/
-
+  .located-section li .icon{
+    width: 60px;
+    height: 60px;
+  }
+  .contact-form input,textarea{
+    height: 45px;
+  }
   /*===============Footer-section======*/
 
   /*===============media-query======*/
@@ -1386,13 +1426,17 @@ span.num{
       width: 100%;
     }
   /*===============Pages===============*/
-
+    .article-section .small-image img{
+      height: 100px;
+    }
   /*===============Portfolio===========*/
 
   /*===============service=============*/
 
   /*===============Contact=============*/
-
+    .location .map-locate{
+      height: 450px;
+    }
   /*===============Footer-section======*/
   .footer-section{
     margin-top: 0;
@@ -1448,6 +1492,9 @@ span.num{
   .para-test{
     margin: 10px 0 0 0 ;
   }
+  .blog-heading{
+    font-size: 24px;
+  }
   /*===============About===============*/
     .company-words .image img{
       height: 450px;
@@ -1461,10 +1508,14 @@ span.num{
     .query-section textarea{
       height: 120px;
     }
+    .contact-query .btn-box{
+      text-align: center;
+    }
     .overview .play-btn {
       width: 180px;
       padding: 25px 50px;
-
+      left: -25px;
+      top: 45%;
     }
     .overview .perform .num{
       display: block;
@@ -1473,13 +1524,24 @@ span.num{
       padding-bottom: 10px;
     }
   /*===============Pages===============*/
-
+  .article-section article .image{
+    height: 280px;
+  }
   /*===============Portfolio===========*/
 
   /*===============service=============*/
 
   /*===============Contact=============*/
-
+  .located-section li .icon{
+    width: 50px;
+    height: 50px;
+  }
+  .contact-form input,textarea{
+    height: 35px;
+  }
+  .contact-form .btn-box{
+    text-align: center;
+  }
   /*===============Footer-section======*/
 
   /*===============media-query======*/
@@ -1494,13 +1556,17 @@ span.num{
   /*===============About===============*/
 
   /*===============Pages===============*/
-
-  /*===============Portfolio===========*/
+  .article-section .small-image img{
+    height: 80px;
+  }
+  /*===============Portfolio===========*/ 
 
   /*===============service=============*/
 
   /*===============Contact=============*/
-
+    .location .map-locate{
+      height: 300px;
+    }
   /*===============Footer-section======*/
 
   /*===============media-query======*/
@@ -1510,7 +1576,7 @@ span.num{
     font-size: 24px;
   }
   .section{
-      padding: 15px;
+      padding: 15px 0;
   }
   /*===============nav============*/
   /*===============heroHome============*/
@@ -1520,13 +1586,20 @@ span.num{
     margin: 0;
   }
   /*===============Pages===============*/
-
+  .article-section .small-image img{
+    height: 60px;
+  }
+  .article-section article .image{
+    height: 220px;
+  }
   /*===============Portfolio===========*/
 
   /*===============service=============*/
 
   /*===============Contact=============*/
-
+  .location .map-locate{
+    height: 250px;
+  }
   /*===============Footer-section======*/
 
   /*===============media-query======*/
