--- a/css/style.css
+++ b/css/style.css
@@ -704,9 +704,8 @@ ul li a span{
     position: relative;
 }
 .gallery-grid .image img{
-    width: 100%;
+    width: auto;
     height: 100%;
-    object-fit: cover;   
     transition: all 0.4s linear;
     
 }
@@ -725,6 +724,9 @@ ul li a span{
     height: 100px;
     bottom: 0;
     background-color: #Fff;
+    transition: all 0.4s linear;
+    z-index: 1;
+
 }
 .gallery-grid .image2{
     grid-area: 1/2/6/3;
@@ -787,6 +789,27 @@ ul li a span{
 }
 .gallery-grid .build-grid-4{
   grid-area: 4/5/9/3;
+}
+.gallery-grid .content{
+  cursor: pointer;
+  position: absolute;
+  top: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+  background-color: #10101055;
+  opacity: 0;
+  transition: all 0.4s linear;
+
+}
+.gallery-grid .image:hover .content{
+  opacity: 1;
+  transition: all 0.4s linear;
+}
+.gallery-grid .image:hover .grid-content{
+  background-color: #ebb204;
 }
 
 
